flicker fix

--- a/styles2.css
+++ b/styles2.css
@@ -81,6 +81,7 @@ div.hidden {
 .projectimage {
     height: 25vh;
     width: auto;
+    -webkit-backface-visibility: hidden;
 }
 
 .projectimagemobile {
@@ -105,6 +106,7 @@ div.hidden {
     width: auto;
     height: 30vh;
 }
+
 #project5image {
     margin-left: 1.4vw;
 }
